(*)aactivemq服务端集群配置

--- a/activemq-delayOrder/延迟订单实战说明.md
+++ b/activemq-delayOrder/延迟订单实战说明.md
@@ -16,3 +16,5 @@
     Message message = session.createTextMessage(txtMsg);//创建消息
     message.setLongProperty(ScheduledMessage.AMQ_SCHEDULED_DELAY, expireTime);//设置延迟发送消息的属性
 步骤3：编辑消费者cn.enjoyedu.service.mq.MqConsume.java 正常的消息消费者
+
+方案三的优势：解决了伸缩性和拓展性的问题
